[project]
name = "react-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.25",
    "rich>=14.0.0",
    "sentence-transformers>=4.0.2",
    "supabase>=2.15.0",
    "wikipedia>=1.4.0",
]
